@@ -111,6 +111,7 @@ All (GUI):
   avoids duplicating character attributes in subsequently typed text when
   they exist in the paragraph style.
 - wxRTC: fixed IsPositionVisible to scroll a position into view correctly.
+- wxRTC: fixed a problem with paste resetting the content paragraph style.
 - Fixed error in generic tree control CalculatePositions.
 - Added wxFD_FILE_MUST_EXIST to wxFileSelector function.
 - Added wxDataViewCtrl Get/SetValueByRow functions for forward compatibility
